# blom

./: .gitattributes  README.md  a.out  blm  g2.sse  go.mod  go.sum  main.go  moon.yml  out.s  out.sse  q.sse  t.c  test.sh
.gimi/: config.toml
.moon/: workspace.yml
analyzer/: analyzer.go  populator.go
ast/: annotation.go  ast.go  block.go  condition.go  declaration.go  expression.go  function.go  literal.go  loop.go  return.go  types.go  variable.go
cli/: cli.go
compiler/: types.go
debug/: debug.go
env/: env.go  object.go
interpreter/: binary.go  block.go  builtin_function.go  condition.go  function.go  interpreter.go  literal.go  loop.go  statement.go  unary.go  variable.go
lexer/: lexer.go
parser/: parser.go
qbe/: comparision.go  data.go  function.go  instruction.go  module.go  pointer.go  statement.go  type.go  types.go  value.go
reader/: reader.go
scope/: scope.go  scopes.go
test/: analyzer.blom  arithmetic.blom  assign.blom  bitwise.blom  call.blom  casting.blom  e.blom  errors.blom  expr.blom  if.blom  loops.blom  main.blom  num.blom  pythonic.blom  qbe.blom  qbe_blocks.blom  qbe_if.blom  qbe_if_expr.blom  qbe_loops.blom  str.blom  (+3 more)
tree-sitter-blom/: CMakeLists.txt  Cargo.toml  README.md  bun.lockb  go.mod  grammar.js  moon.yml  package.json
tree-sitter-blom-backup/: binding.gyp  pyproject.toml  tree-sitter.json
tree-sitter-blom-backup/bindings/rust/: lib.rs
tree-sitter-blom/bindings/c/: tree-sitter-blom.pc.in
tree-sitter-blom/bindings/go/: binding.go
tree-sitter-blom/bindings/python/tests/: test_binding.py
tree-sitter-blom/bindings/python/tree_sitter_blom/: binding.c
tree-sitter-blom/bindings/rust/: build.rs
tree-sitter-blom/queries/: highlights.scm
tree-sitter-blom/src/: grammar.json  node-types.json  parser.c
(+294 files in other folders)
