[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-blom"
description = "A programming language built in Go, offering compilation with QBE, direct interpretation, and transpilation to multiple languages"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "blom"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Jozef Steinhübl", email = "contact@xhyrom.dev" }]
requires-python = ">=3.9"
license.text = "EUPL-1.2"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/xhyrom/blom"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
