[package]
name = "tree-sitter-blom"
description = "A programming language built in Go, offering compilation with QBE, direct interpretation, and transpilation to multiple languages"
version = "0.1.0"
authors = ["Jozef Steinhübl <contact@xhyrom.dev>"]
license = "EUPL-1.2"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "blom"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/xhyrom/blom"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
